internal commit candidate selection

--- a/stvsystem/stvsystem/Views/Selection/ConfirmSelection.cshtml
+++ b/stvsystem/stvsystem/Views/Selection/ConfirmSelection.cshtml
@@ -1,142 +1,24 @@
-﻿@using  stvsystem.Data
-@model SelectionItem
+﻿@using stvsystem.Data
+@model CredentialItem
 @{
     ViewData["Title"] = "Ավարտել ընտրությունը";
     Layout = "~/Views/Shared/_LayoutNull.cshtml";
 }
 
 
-@using (Html.BeginForm("SaveSelection", "Selection", FormMethod.Post, new { id = "frmCandidateSelection" }))
+@using (Html.BeginForm("SaveSelections", "Selection", FormMethod.Post, new { id = "frmCandidateSelection" }))
 {
-     @Html.HiddenFor(model => model.Password)
-    @Html.HiddenFor(model => model.CandidateCount)
-    @Html.HiddenFor(model => model.Candidate1ID)
-    @Html.HiddenFor(model => model.Candidate2ID)
-    @Html.HiddenFor(model => model.Candidate3ID)
-    @Html.HiddenFor(model => model.Candidate4ID)
-    @Html.HiddenFor(model => model.Candidate5ID)
-    @Html.HiddenFor(model => model.Candidate6ID)
-    @Html.HiddenFor(model => model.Candidate7ID)
-    @Html.HiddenFor(model => model.Candidate8ID)
-    @Html.HiddenFor(model => model.Candidate9ID)
-    @Html.HiddenFor(model => model.Candidate10ID)
+    @Html.HiddenFor(model => model.CredentialID)
 
     <div class="container-maxwidth500">
         <div class="card">
             <div class="card-header">@ViewData["Title"]</div>
-            <div class="card-body">
-                <h6 style="text-align:center; margin-bottom:20px">Դուք ընտրել եք հետևալ թեկնածուներին ըստ առաջնահերթության</h6>
-                @if (Model.CandidateCount > 0)
-                {
-                    if (Model.Candidate1ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate1ID)*@
-                            <label class="control-label">1-ին թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate1Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 1)
-                {
-                    if (Model.Candidate2ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate2ID)*@
-                            <label class="control-label">2-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate2Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 2)
-                {
-                    if (Model.Candidate3ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate3ID)*@
-                            <label class="control-label">3-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate3Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 3)
-                {
-                    if (Model.Candidate4ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate4ID)*@
-                            <label class="control-label">4-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate4Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 4)
-                {
-                    if (Model.Candidate5ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate5ID)*@
-                            <label class="control-label">5-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate5Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 5)
-                {
-                    if (Model.Candidate6ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate6ID)*@
-                            <label class="control-label">6-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate6Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 6)
-                {
-                    if (Model.Candidate7ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate7ID)*@
-                            <label class="control-label">7-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate7Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 7)
-                {
-                    if (Model.Candidate8ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate8ID)*@
-                            <label class="control-label">8-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate8Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 8)
-                {
-                    if (Model.Candidate9ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate9ID)*@
-                            <label class="control-label">3-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate9Name)
-                        </div>
-                    }
-                }
-                @if (Model.CandidateCount > 9)
-                {
-                    if (Model.Candidate10ID != null)
-                    {
-                        <div class="form-group">
-                            @*@Html.LabelFor(model => model.Candidate10ID)*@
-                            <label class="control-label">10-րդ թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate10Name)
-                        </div>
-                    }
-                }
-            </div>
+
+            @foreach (SelectionConfirmationItem item in ViewBag.CandidateSelections)
+            {
+               <p>@item.CandidateName </p>
+            }
+
             <div class="card-footer">
                 <button type="submit" id="SubmitButton" class="btn btn-sm btn-primary"><i class="icons icon-check"></i>&nbsp;Ավարտել</button>
                 <button type="button" onclick="location.href='@Url.Action("Index", "Selection")'" class="btn btn-sm btn-secondary"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
