--- a/stvsystem/stvsystem/Views/Selection/SelectCandidate.cshtml
+++ b/stvsystem/stvsystem/Views/Selection/SelectCandidate.cshtml
@@ -21,44 +21,47 @@
             <div class="card-header">@ViewData["Title"]</div>
             <div class="card-body">
                 <div class="form-group">
-                    @Html.DisplayFor(model => model.CandidateIndex)
+                    @Html.LabelFor(model => model.CandidateIndex, new { @class = "control-label" })
+                    @Html.TextBoxFor(model => model.CandidateIndex, new { @readonly = "readonly" })
+                </div>
+                <div class="form-group">
                     @Html.LabelFor(model => model.CourtID, new { @class = "control-label" })
                     @(Html.Kendo().ComboBoxFor(model => model.CourtID)
-                                        .DataTextField("Text")
-                                        .DataValueField("Value")
-                                        .Placeholder("-- Ընտրել --")
-                                        .Filter(FilterType.StartsWith)
-                                        .HtmlAttributes(new { @class = "form-control" })
-                                        .DataSource(source =>
-                                        {
-                                            source.Read(read =>
+                                            .DataTextField("Text")
+                                            .DataValueField("Value")
+                                            .Placeholder("-- Ընտրել --")
+                                            .Filter(FilterType.StartsWith)
+                                            .HtmlAttributes(new { @class = "form-control" })
+                                            .DataSource(source =>
                                             {
-                                                read.Action("GetCourts", "Selection");
-                                            });
-                                        })
+                                                source.Read(read =>
+                                                {
+                                                    read.Action("GetCourts", "Selection");
+                                                });
+                                            })
                     )
                 </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.CandidateID, new { @class = "control-label" })
                     @(Html.Kendo().ComboBoxFor(model => model.CandidateID)
-                                        .DataTextField("Text")
-                                        .DataValueField("Value")
-                                        .Placeholder("-- Ընտրել --")
-                                        .Filter(FilterType.StartsWith)
-                                        .HtmlAttributes(new { @class = "form-control" })
-                                        .DataSource(source =>
-                                        {
-                                            source.Read(read =>
+                                            .DataTextField("Text")
+                                            .DataValueField("Value")
+                                            .Placeholder("-- Ընտրել --")
+                                            .Filter(FilterType.StartsWith)
+                                            .HtmlAttributes(new { @class = "form-control" })
+                                            .DataSource(source =>
                                             {
-                                                read.Action("GetCandidates", "Selection")
-                                                .Data("filterCandidates");
+                                                source.Read(read =>
+                                                {
+                                                    read.Action("GetCandidates", "Selection")
+                                                    .Data("filterCandidates");
+                                                })
+                                                .ServerFiltering(true);
                                             })
-                                            .ServerFiltering(true);
-                                        })
-                                        .Enable(false)
-                                          .AutoBind(false)
-                                          .CascadeFrom("CourtID")
+                                            .Enable(false)
+                                              .AutoBind(false)
+                                              .CascadeFrom("CourtID")
                     )
                     <script>
                         function filterCandidates() {
@@ -104,7 +107,8 @@
                 for (var i = 0; i < errors.length; i++) {
                     html += "<li>" + errors[i] + "</li>";
                 }
-                html += "</ul>";            }
+                html += "</ul>";
+            }
             $("#errors").empty().append($(html));
         }
     });
